# SWL

./: CMakeLists.txt  README.md
SWL.xcodeproj/: project.pbxproj
SWL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SWL.xcodeproj/project.xcworkspace/xcuserdata/jjjlaw.xcuserdatad/: UserInterfaceState.xcuserstate
SWL.xcodeproj/xcshareddata/xcschemes/: SWL.xcscheme
demos/: buttons_demo.cpp  canvas_demo.cpp  hello_world.cpp  listview_hire_and_fire_demo.cpp  listview_simple_demo.cpp  menuview_demo.cpp  scenes_demo.cpp
include/: spritecache.hpp  statemachine.hpp  themes.hpp  types.hpp  utility.hpp
include/interfaces/: button.hpp  text.hpp
include/models/: datamodel.hpp  listmodel.hpp
include/widgets/: application.hpp  button.hpp  canvas.hpp  datamodel.hpp  dataview.hpp  image.hpp  listmodel.hpp  listview.hpp  menumodel.hpp  menuview.hpp  rectitem.hpp  textbutton.hpp  textitem.hpp  widgetitem.hpp
res/: dir.conf  dir.json  halloween-terrains.conf  log1.txt  scores.conf  skelllie.sifz  terrains.conf  unit-classes.conf  unit-names.conf  world-map-1-provinces-2-revised-kinda.xcf  world-map-1-provinces.xcf  world-map-2-internal.xcf  world-map-2.conf  world-map-2.conf.old  world-map-3-graph.conf  world-map-3-internal.xcf  world-map-3.conf
res/config/: classes.json  terrains.conf
res/config/classes/: ARCHER.json  SOLDIER.json
res/img/terrain/: forest.xcf
res/maps/: codes
res/maps/terrain/: map11.map  map2.map  map3.map  map5.map
res/maps/unsorted/: map0.map  map1.map  map10.map  map4.map  map6.map  map7.map  map8.map  map9.map
res/savedgamedata/: log1.txt
res/terrain/: mountain.xcf
src/: SDL_FontCache.cpp  SDL_FontCache.hpp  sdl_image_inc.hpp  sdl_inc.hpp  sdl_mixer_inc.hpp  sdl_ttf_inc.hpp  spritecache.cpp  statemachine.cpp  utility.cpp  utility.hpp
src/demos/: buttons_demo.cpp  canvas_demo.cpp  listview_hire_and_fire_demo.cpp  listview_simple_demo.cpp  menuview_demo.cpp  scenes_demo.cpp
src/interfaces/: button.cpp  text.cpp  text.hpp
src/models/: menumodel.cpp
src/widgets/: application.cpp  baseapplication.cpp  baseapplication.hpp  button.cpp  button.hpp  canvas.cpp  dataview.hpp  image.cpp  listmodel.hpp  listview.hpp  menumodel.cpp  rectitem.cpp  statemachine.cpp  textbutton.cpp  textitem.cpp  textitem.hpp  widgetitem.cpp
(+2 files in other folders)
